Using github repo -> change version from 0.14.2-SNAPSHOT to 0.14.3

--- a/discoverylab/qocim-capsule-lab/pom.xml
+++ b/discoverylab/qocim-capsule-lab/pom.xml
@@ -62,37 +62,37 @@
 		<dependency>
 			<groupId>qocim-common</groupId>
 			<artifactId>qocim-common</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-precisionindicator</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-freshnessindicator</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-tool-functions</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-qocmanagement-functions</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-cdfm-functions</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-routing-filter</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 	</dependencies>
 
