--- a/discoverylab/qocim-capsule-lab/qocim-capsule-lab-capsule/pom.xml
+++ b/discoverylab/qocim-capsule-lab/qocim-capsule-lab-capsule/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-capsule</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 	</dependencies>
 
