--- a/framework/qocim-tools/qocim-criteria/pom.xml
+++ b/framework/qocim-tools/qocim-criteria/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>qocim-tools</groupId>
 		<artifactId>qocim-tools</artifactId>
-		<version>0.14.2-SNAPSHOT</version>
+		<version>0.14.3</version>
 	</parent>
 
 	<artifactId>qocim-criteria</artifactId>
