--- a/framework/qocim-tools/qocim-routing-filter/pom.xml
+++ b/framework/qocim-tools/qocim-routing-filter/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>qocim-tools</groupId>
 		<artifactId>qocim-tools</artifactId>
-		<version>0.14.2-SNAPSHOT</version>
+		<version>0.14.3</version>
 	</parent>
 
 	<artifactId>qocim-routing-filter</artifactId>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>qocim-common</groupId>
 			<artifactId>qocim-common</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>0.14.3</version>
 		</dependency>
 		<dependency>
 			<groupId>muContext.data-model</groupId>
