Back to version 0.14.2-SNAPSHOT for QoCIM due to an uncontroled dependency to the module muContext + using version 0.15.4-SNAPSHOT of muContext

--- a/discoverylab/qocim-capsule-lab/qocim-capsule-lab-application/pom.xml
+++ b/discoverylab/qocim-capsule-lab/qocim-capsule-lab-application/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>muContext</groupId>
 			<artifactId>muContext-application</artifactId>
-			<version>0.15.2</version>
+			<version>0.15.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
