--- a/discoverylab/qocim-capsule-lab/qocim-capsule-lab-capsule/pom.xml
+++ b/discoverylab/qocim-capsule-lab/qocim-capsule-lab-capsule/pom.xml
@@ -27,12 +27,12 @@
 		<dependency>
 			<groupId>muContext</groupId>
 			<artifactId>muContext-application</artifactId>
-			<version>0.15.2</version>
+			<version>0.15.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-capsule</artifactId>
-			<version>0.14.3</version>
+			<version>0.14.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
