--- a/discoverylab/qocim-lab/qocim-lab-collector-exercise2/pom.xml
+++ b/discoverylab/qocim-lab/qocim-lab-collector-exercise2/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>muContext</groupId>
 			<artifactId>muContext-collector</artifactId>
-			<version>0.15.2</version>
+			<version>0.15.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
