--- a/framework/qocim-tools/qocim-functions/qocim-qocmanagement-functions/pom.xml
+++ b/framework/qocim-tools/qocim-functions/qocim-qocmanagement-functions/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>qocim-tools</groupId>
 		<artifactId>qocim-functions</artifactId>
-		<version>0.14.3</version>
+		<version>0.14.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>qocim-qocmanagement-functions</artifactId>
@@ -35,22 +35,22 @@
 		<dependency>
 			<groupId>qocim-common</groupId>
 			<artifactId>qocim-common</artifactId>
-			<version>0.14.3</version>
+			<version>0.14.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>muContext.data-model</groupId>
 			<artifactId>muContext-data-model-context</artifactId>
-			<version>0.15.2</version>
+			<version>0.15.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-tool-functions</artifactId>
-			<version>0.14.3</version>
+			<version>0.14.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-common-functions</artifactId>
-			<version>0.14.3</version>
+			<version>0.14.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
