--- a/.github/workflows/maven-publish-qocim-tools.yml
+++ b/.github/workflows/maven-publish-qocim-tools.yml
@@ -23,7 +23,7 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     - name: Build with Maven
-      run: mvn -B package --file framework/qocim-tools/pom.xml -U -Dmaven.wagon.http.ssl.insecure=true -Dmaven.wagon.http.ssl.allowall=true -Dmaven.wagon.http.ssl.ignore.validity.dates=true
+      run: mvn -B package --file framework/qocim-tools/pom.xml -Dmaven.wagon.http.ssl.insecure=true -Dmaven.wagon.http.ssl.allowall=true -Dmaven.wagon.http.ssl.ignore.validity.dates=true
 
   publish:
     runs-on: ubuntu-latest 
