--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -13,17 +13,113 @@
 			     http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>qocim</groupId>
-		<artifactId>qocim-framework</artifactId>
-		<version>0.14.2-SNAPSHOT</version>
-	</parent>
-
-	<groupId>qocim-common</groupId>
-	<artifactId>qocim-common</artifactId>
-	<name>QoCIM common model</name>
+	<groupId>qocim</groupId>
+	<artifactId>qocim-framework</artifactId>
+	<version>0.14.2-SNAPSHOT</version>
+	<name>QoCIM framework</name>
 	<description>The QoCIM model: Quality of Context Information Model</description>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
+
+	<licenses>
+		<license>
+			<name>LGPL</name>
+			<url>http://www.gnu.org/licenses/lgpl</url>
+		</license>
+	</licenses>
+
+	<organization>
+		<name>IRIT - Universite Paul SABATIER</name>
+		<url>http://irit.fr/</url>
+	</organization>
+
+	<inceptionYear>2013</inceptionYear>
+	<developers>
+		<developer>
+			<id>conan</id>
+			<name>Denis Conan</name>
+			<email>Denis.Conan[at]telecom-sudparis.eu</email>
+			<url>http://www-public.telecom-sudparis.eu/~conan</url>
+			<organization>Institut Mines Télécom, Télécom SudParis</organization>
+			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
+			<roles>
+				<role>Architect</role>
+				<role>Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>lim</id>
+			<name>Léon Lim</name>
+			<email>Leon.Lim[at]telecom-sudparis.eu</email>
+			<url>http://www-public.telecom-sudparis.eu/~lim_leon</url>
+			<organization>Institut Mines Télécom, Télécom SudParis</organization>
+			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
+			<roles>
+				<role>Architect</role>
+				<role>Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>chabridon</id>
+			<name>Sophie Chabridon</name>
+			<email>Sophie.Chabridon[at]telecom-sudparis.eu</email>
+			<url>http://www-public.telecom-sudparis.eu/~chabrido</url>
+			<organization>Institut Mines Télécom, Télécom SudParis</organization>
+			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
+			<roles>
+				<role>Architect</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>taconet</id>
+			<name>Chantal Taconet</name>
+			<email>Chantal.Taconet[at]telecom-sudparis.eu</email>
+			<url>http://www-public.telecom-sudparis.eu/~taconet</url>
+			<organization>Institut Mines Télécom, Télécom SudParis</organization>
+			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
+			<roles>
+				<role>Architect</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>manzoor</id>
+			<name>Atif Manzoor</name>
+			<email>Atif.Manzoor[at]telecom-sudparis.eu</email>
+			<organization>Institut Mines Télécom, Télécom SudParis</organization>
+			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
+			<roles>
+				<role>Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>pierrick</id>
+			<name>Pierrick MARIE</name>
+			<email>Pierrick.MARIE@irit.fr</email>
+			<organization>Institut de Recherche en Informatique de Toulouse; Service IntEgration and netwoRk Administration</organization>
+			<organizationUrl>http://www.irit.fr/SIERA</organizationUrl>
+			<roles>
+				<role>Architect</role>
+				<role>Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>desprats</id>
+			<name>Thierry Desprats</name>
+			<email>Thierry.Desprats@irit.fr</email>
+			<organization>Institut de Recherche en Informatique de Toulouse; Service IntEgration and netwoRk Administration</organization>
+			<organizationUrl>http://www.irit.fr/SIERA</organizationUrl>
+			<roles>
+				<role>Architect</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<contributors>
+		<contributor>
+			<name>Elliot FELGINES</name>
+			<email>felgines.elliot[at]gmail.com</email>
+			<organization>Universite Paul SABATIER student</organization>
+		</contributor>
+	</contributors>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,58 +128,14 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- osgi felix bundlelisation -->
-			<dependency>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.7</version>
-			</dependency>
-			<!-- surefire -->
-			<dependency>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.15</version>
-			</dependency>
-			<!-- junit -->
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.10</version>
-				<scope>test</scope>
-			</dependency>
-			<!-- javadoc -->
-			<dependency>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
-			</dependency>
 			<!-- source packaging configuration -->
 			<dependency>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<version>2.2.1</version>
 			</dependency>
-			<!-- site -->
-			<dependency>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.3</version>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-	</dependencies>
 
 	<build>
 		<pluginManagement>
@@ -189,38 +241,16 @@
 				</configuration>
 			</plugin>
 
-			<!-- jar package generation configuration -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<archive>
-						<index>true</index>
-						<manifest>
-							<addClasspath>true</addClasspath>
-						</manifest>
-						<manifestEntries>
-							<mode>alpha</mode>
-							<url>${project.url}</url>
-							<key>value</key>
-							<Implementation-Vendor>IRITs</Implementation-Vendor>
-							<Implementation-Version>0.14.2SNAPSHOT</Implementation-Version>
-							<Implementation-Title>${project.name}</Implementation-Title>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-
 		</plugins>
 	</build>
+
+	<!-- deployment: mvn deploy -->
+	<distributionManagement>
+	</distributionManagement>
+
+	<modules>
+		<module>qocim-common</module>
+		<module>qocim-tools</module>
+	</modules>
 
 </project>
