--- a/framework/qocim-tools/pom.xml
+++ b/framework/qocim-tools/pom.xml
@@ -13,10 +13,16 @@
 			     http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>qocim</groupId>
+		<artifactId>qocim-framework</artifactId>
+		<version>0.14.2-SNAPSHOT</version>
+	</parent>
+
 	<groupId>qocim-tools</groupId>
 	<artifactId>qocim-tools</artifactId>
 	<version>0.14.2-SNAPSHOT</version>
-	<name>The QoCIM common model</name>
+	<name>QoCIM tools</name>
 	<description>The QoCIM model: Quality of Context Information Model</description>
 	<packaging>pom</packaging>
 
@@ -26,100 +32,6 @@
 			<url>http://www.gnu.org/licenses/lgpl</url>
 		</license>
 	</licenses>
-
-	<organization>
-		<name>IRIT - Universite Paul SABATIER</name>
-		<url>http://irit.fr/</url>
-	</organization>
-
-	<inceptionYear>2013</inceptionYear>
-	<developers>
-		<developer>
-			<id>conan</id>
-			<name>Denis Conan</name>
-			<email>Denis.Conan[at]telecom-sudparis.eu</email>
-			<url>http://www-public.telecom-sudparis.eu/~conan</url>
-			<organization>Institut Mines Télécom, Télécom SudParis</organization>
-			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
-			<roles>
-				<role>Architect</role>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>lim</id>
-			<name>Léon Lim</name>
-			<email>Leon.Lim[at]telecom-sudparis.eu</email>
-			<url>http://www-public.telecom-sudparis.eu/~lim_leon</url>
-			<organization>Institut Mines Télécom, Télécom SudParis</organization>
-			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
-			<roles>
-				<role>Architect</role>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>chabridon</id>
-			<name>Sophie Chabridon</name>
-			<email>Sophie.Chabridon[at]telecom-sudparis.eu</email>
-			<url>http://www-public.telecom-sudparis.eu/~chabrido</url>
-			<organization>Institut Mines Télécom, Télécom SudParis</organization>
-			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
-			<roles>
-				<role>Architect</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>taconet</id>
-			<name>Chantal Taconet</name>
-			<email>Chantal.Taconet[at]telecom-sudparis.eu</email>
-			<url>http://www-public.telecom-sudparis.eu/~taconet</url>
-			<organization>Institut Mines Télécom, Télécom SudParis</organization>
-			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
-			<roles>
-				<role>Architect</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>manzoor</id>
-			<name>Atif Manzoor</name>
-			<email>Atif.Manzoor[at]telecom-sudparis.eu</email>
-			<organization>Institut Mines Télécom, Télécom SudParis</organization>
-			<organizationUrl>http://www.telecom-sudparis.eu</organizationUrl>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>pierrick</id>
-			<name>Pierrick MARIE</name>
-			<email>Pierrick.MARIE@irit.fr</email>
-			<organization>Institut de Recherche en Informatique de Toulouse; Service IntEgration and netwoRk Administration</organization>
-			<organizationUrl>http://www.irit.fr/SIERA</organizationUrl>
-			<roles>
-				<role>Architect</role>
-				<role>Developer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>desprats</id>
-			<name>Thierry Desprats</name>
-			<email>Thierry.Desprats@irit.fr</email>
-			<organization>Institut de Recherche en Informatique de Toulouse; Service IntEgration and netwoRk Administration</organization>
-			<organizationUrl>http://www.irit.fr/SIERA</organizationUrl>
-			<roles>
-				<role>Architect</role>
-			</roles>
-		</developer>
-	</developers>
-
-	<contributors>
-		<contributor>
-			<name>Elliot FELGINES</name>
-			<email>felgines.elliot[at]gmail.com</email>
-			<organization>Universite Paul SABATIER student</organization>
-		</contributor>
-	</contributors>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -309,8 +221,8 @@
 							<url>${project.url}</url>
 							<key>value</key>
 							<Implementation-Vendor>Institut Mines Télécom, Télécom SudParis</Implementation-Vendor>
-							<Implementation-Version>${parent-version}</Implementation-Version>
 							<Implementation-Title>${project.name}</Implementation-Title>
+							<Implementation-Version>0.14.2-SNAPSHOT</Implementation-Version>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -319,38 +231,11 @@
 		</plugins>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>muContext-release</id>
-			<name>muContext's release repository</name>
-			<url>https://fusionforge.int-evry.fr/www/mucontext/maven-repository/release/</url>
-		</repository>
-	</repositories>
-
-	<!-- deployment: mvn deploy -->
-	<distributionManagement>
-		<repository>
-			<id>qocim-tools</id>
-			<name>QoCIM tools release repository</name>
-			<url>file:///${deploy.dir}/www/maven-repository/release</url>
-		</repository>
-		<snapshotRepository>
-			<id>qocim-tools</id>
-			<name>QoCIM tools snapshot repository</name>
-			<url>file:///${deploy.dir}/www/maven-repository/snapshot</url>
-		</snapshotRepository>
-		<site>
-			<id>qocim-tools</id>
-			<name>QoCIM tools Maven site</name>
-			<url>file:///${deploy.dir}/www/maven-repository/site</url>
-		</site>
-	</distributionManagement>
-
 	<modules>
 		<module>qocim-functions</module>
-		<module>qocim-routing-filter</module>
+<!--		<module>qocim-routing-filter</module>-->
 		<module>qocim-criteria</module>
-		<module>qocim-capsule</module>
+<!--		<module>qocim-capsule</module>-->
 	</modules>
 
 </project>
