--- a/framework/qocim-tools/qocim-criteria/qocim-spatialresolutionindicator/pom.xml
+++ b/framework/qocim-tools/qocim-criteria/qocim-spatialresolutionindicator/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>qocim-common</artifactId>
 			<version>0.14.2-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>qocim</groupId>
+            <artifactId>qocim-common</artifactId>
+            <version>0.14.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
