--- a/framework/qocim-tools/qocim-functions/qocim-qocmanagement-functions/pom.xml
+++ b/framework/qocim-tools/qocim-functions/qocim-qocmanagement-functions/pom.xml
@@ -20,7 +20,7 @@
 	</parent>
 
 	<artifactId>qocim-qocmanagement-functions</artifactId>
-	<name>The QoCIM-based qoc management functions</name>
+	<name>QoCIM-based qoc management functions</name>
 	<description>Functions used to manage QoC metadata.</description>
 	<packaging>jar</packaging>
 
@@ -38,11 +38,6 @@
 			<version>0.14.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>muContext.data-model</groupId>
-			<artifactId>muContext-data-model-context</artifactId>
-			<version>0.15.4-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-tool-functions</artifactId>
 			<version>0.14.2-SNAPSHOT</version>
@@ -51,6 +46,12 @@
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-common-functions</artifactId>
 			<version>0.14.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>qocim</groupId>
+			<artifactId>qocim-common</artifactId>
+			<version>0.14.2-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
