--- a/framework/qocim-tools/pom.xml
+++ b/framework/qocim-tools/pom.xml
@@ -233,7 +233,7 @@
 
 	<modules>
 		<module>qocim-functions</module>
-<!--		<module>qocim-routing-filter</module>-->
+		<module>qocim-routing-filter</module>
 		<module>qocim-criteria</module>
 <!--		<module>qocim-capsule</module>-->
 	</modules>
