--- a/qocim-tools/qocim-criteria/qocim-precisionindicator/pom.xml
+++ b/qocim-tools/qocim-criteria/qocim-precisionindicator/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>qocim-tools</groupId>
 		<artifactId>qocim-criteria</artifactId>
-		<version>0.14.2-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>qocim-precisionindicator</artifactId>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>qocim-common</groupId>
 			<artifactId>qocim-common</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
     </dependencies>
 
