--- a/qocim-tools/pom.xml
+++ b/qocim-tools/pom.xml
@@ -16,12 +16,12 @@
 	<parent>
 		<groupId>qocim</groupId>
 		<artifactId>qocim-framework</artifactId>
-		<version>0.14.2-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<groupId>qocim-tools</groupId>
 	<artifactId>qocim-tools</artifactId>
-	<version>0.14.2-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>QoCIM tools</name>
 	<description>The QoCIM model: Quality of Context Information Model</description>
 	<packaging>pom</packaging>
