--- a/qocim-tools/qocim-functions/qocim-tool-functions/pom.xml
+++ b/qocim-tools/qocim-functions/qocim-tool-functions/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>qocim-tools</groupId>
 		<artifactId>qocim-functions</artifactId>
-		<version>0.14.2-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>qocim-tool-functions</artifactId>
@@ -35,12 +35,12 @@
 		<dependency>
 			<groupId>qocim-common</groupId>
 			<artifactId>qocim-common</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>qocim-tools</groupId>
 			<artifactId>qocim-common-functions</artifactId>
-			<version>0.14.2-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
