Move common to model

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -19,9 +19,9 @@
 		<version>1.0.1</version>
 	</parent>
 
-	<groupId>qocim.common</groupId>
-	<artifactId>qocim-common</artifactId>
-	<name>QoCIM common model</name>
+	<groupId>qocim.model</groupId>
+	<artifactId>qocim-model</artifactId>
+	<name>QoCIM model</name>
 	<description>The QoCIM model: Quality of Context Information Model</description>
 	<packaging>jar</packaging>
 
