--- a/criteria/spatial-resolution/pom.xml
+++ b/criteria/spatial-resolution/pom.xml
@@ -26,8 +26,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>qocim.common</groupId>
-			<artifactId>qocim-common</artifactId>
+			<groupId>qocim.model</groupId>
+			<artifactId>qocim-model</artifactId>
 			<version>1.0.1</version>
 		</dependency>
     </dependencies>
