--- a/tools/functions/common/pom.xml
+++ b/tools/functions/common/pom.xml
@@ -33,8 +33,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>qocim.common</groupId>
-			<artifactId>qocim-common</artifactId>
+			<groupId>qocim.model</groupId>
+			<artifactId>qocim-model</artifactId>
 			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
