--- a/tools/routing-filter/pom.xml
+++ b/tools/routing-filter/pom.xml
@@ -37,8 +37,8 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>qocim.common</groupId>
-			<artifactId>qocim-common</artifactId>
+			<groupId>qocim.model</groupId>
+			<artifactId>qocim-model</artifactId>
 			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
