--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: QoCIM-common Maven Package
+name: QoCIM Maven Package
 
 on: [push]
       
@@ -23,7 +23,7 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     - name: Build with Maven
-      run: mvn -B package --file framework/qocim-common/pom.xml
+      run: mvn -B package
 
   publish:
     runs-on: ubuntu-latest 
@@ -37,6 +37,6 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
       - name: Publish package
-        run: mvn --batch-mode deploy --file framework/qocim-common/pom.xml
+        run: mvn --batch-mode deploy 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
