--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: QoCIM Maven Package
+name: QoCIM Build Package
 
 on: [push]
       
@@ -24,8 +24,3 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     - name: Build with Maven
       run: mvn -B package
-
-    - name: Publish package
-      run: mvn --batch-mode deploy 
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
