--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,7 +1,7 @@
 name: Publish package to GitHub Packages
-on:
-  release:
-    types: [created]
+
+on: [push]
+
 jobs:
   publish:
     runs-on: ubuntu-latest 
