Demo of two criteria: freshness and precision

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
     <modules>
         <module>metamodel</module>
-        <!-- <module>tools</module>
-        <module>criteria</module> -->
+        <!-- <module>tools</module> -->
+        <module>criteria</module>
     </modules>
 
     <licenses>
