The criteria use online version of QoCIM metamodel

--- a/criteria/freshness/pom.xml
+++ b/criteria/freshness/pom.xml
@@ -32,6 +32,14 @@
     <description>This is a QoCIM-based definition of the freshness indicator.</description>
     <packaging>jar</packaging>
 
+    <repositories>
+  		<repository>
+  				<id>github</id>
+  				<name>GitHub Packages</name>
+  				<url>https://maven.pkg.github.com/pierrick-marie/qocim</url>
+  		</repository>
+  	</repositories>
+
     <dependencies>
         <dependency>
             <groupId>qocim</groupId>
